Implement MMapDirectory with Java 20 Project Parana Preview API